# ChangeLog for dev-python/pyopengl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopengl/ChangeLog,v 1.67 2012/02/22 14:34:49 patrick Exp $

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> pyopengl-3.0.1.ebuild:
  Restricting jython

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> pyopengl-3.0.1.ebuild:
  Restricting pypy #404943

  28 Jul 2011; Patrick Lauer <patrick@gentoo.org> pyopengl-3.0.1.ebuild:
  Removing SF mirrors for #372213

  11 Jul 2011; Matt Turner <mattst88@gentoo.org> pyopengl-3.0.1.ebuild:
  Added ~mips, bug 298612

  30 Sep 2010; Justin Lecher <jlec@gentoo.org> pyopengl-3.0.1.ebuild:
  keyworded for ~-linux prefix

  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  pyopengl-3.0.1.ebuild:
  virtual/glut -> media-libs/glut

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> pyopengl-3.0.1.ebuild:
  ppc64 stable wrt #319171

  24 May 2010; <nixnut@gentoo.org> pyopengl-3.0.1.ebuild:
  ppc stable #319171

  23 May 2010; Raúl Porcel <armin76@gentoo.org> pyopengl-3.0.1.ebuild:
  alpha/arm/ia64/sh/sparc/x86 stable wrt #319171

  18 May 2010; Markos Chandras <hwoarang@gentoo.org> pyopengl-3.0.1.ebuild:
  Stable on amd64 wrt bug #319171

  14 May 2010; Jeroen Roovers <jer@gentoo.org> pyopengl-3.0.1.ebuild:
  Stable for HPPA (bug #319171).

  18 Apr 2010; <nixnut@gentoo.org> pyopengl-3.0.1_beta2.ebuild:
  ppc stable #302672

*pyopengl-3.0.1 (04 Apr 2010)

  04 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyopengl-3.0.1.ebuild:
  Version bump.

  04 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  pyopengl-3.0.1_beta2.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #302672

  23 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  pyopengl-3.0.1_beta2.ebuild:
  stable x86, bug 302672

  10 Feb 2010; Jeroen Roovers <jer@gentoo.org> pyopengl-3.0.1_beta2.ebuild:
  Stable for HPPA (bug #302672).

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org>