@@ -1,13 +1,12 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopengl/pyopengl-3.0.1.ebuild,v 1.14 2012/02/22 14:34:49 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopengl/pyopengl-3.0.1.ebuild,v 1.15 2012/02/22 14:37:27 patrick Exp $
 
 EAPI="3"
-PYTHON_DEPEND="2:2.5"
 PYTHON_USE_WITH="tk"
 PYTHON_USE_WITH_OPT="tk"
 SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="2.7-pypy-* *-jython"
+RESTRICT_PYTHON_ABIS="2.7-pypy-* *-jython 3.*"
 
 inherit distutils
 
@@ -31,7 +30,6 @@ RDEPEND="media-libs/freeglut
 	tk? ( dev-tcltk/togl )"
 DEPEND="${RDEPEND}
 	dev-python/setuptools"
-RESTRICT_PYTHON_ABIS="2.4 3.*"
 
 S="${WORKDIR}/${MY_P}"
 
